fix the (add-task) input align.

--- a/cw6.css
+++ b/cw6.css
@@ -184,6 +184,11 @@ button {
 .is-blurred {
   filter: blur(3px);
 }
+
 .hidden {
   display: none;
+}
+
+.add-task input {
+  text-align: right;
 }
